--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    background-repeat: no-repeat;
     width: 100%;
     height: 100%;
     border-radius: 4px;
@@ -166,6 +167,68 @@ body {
 
 #thumbnails {
     overflow: hidden;
+}
+
+#selectedImage {
+    position: relative;
+    transition: transform 0.2s ease; /* Плавное изменение размера */
+}
+
+#resizeScrollerWrapper {
+    width: 200px;
+    margin-bottom: 10px;
+}
+
+#resizeScroller {
+    width: 100%;
+    transform: translateY(-5px); /* Центрируем скроллер */
+}
+
+#resizeConfirm, #resizeCancel {
+    z-index: 5;
+}
+
+#resizeScrollerWrapper {
+    z-index: 3;
+    position: absolute;
+    top: 342.35123px;
+}
+
+#resizeMoveControls {
+    position: absolute;
+    width: 257px;
+    height: 257px;
+    top: 75px;
+}
+
+.move-button {
+    z-index: 999;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #000;
+    background-color: #fff;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+#moveUp, #moveLeft, #moveRight, #moveDown {
+    position: absolute;
+}
+
+#moveUp {
+    top: 0;
+}
+
+#moveLeft {
+    left: 0;
+}
+
+#moveRight {
+    right: 0;
+}
+
+#moveDown {
+    bottom: 0;
 }
 
 /* Миниатюры: задаем размер около 15% от оригинала */
@@ -235,6 +298,14 @@ body {
     .columns {
         width: 33%;
     }
+
+    #resizeMoveControls {
+        top: 130px;
+    }
+
+    #resizeScrollerWrapper {
+        top: 400px;
+    }    
 
     .column-one {
         gap: 15px;
