--- a/Renamed changes/style.css
+++ b/Renamed changes/style.css
@@ -30,6 +30,11 @@ body {
     border: 1px solid black;
 }
 
+.column-three {
+    display: flex;
+    overflow: hidden;
+}
+
 #addLayer, #removeLayer {
     width: 50px;
     height: 50px;
@@ -130,6 +135,11 @@ body {
     cursor: pointer;
 }
 
+.layer-popup li div {
+    background-size: 100%;
+    background-position: center;
+}
+
 .layer-popup li img {
     border: 1px solid black;
     width: 50px;
@@ -160,12 +170,11 @@ body {
 #thumbnails {
     display: flex;
     flex-wrap: wrap;
+    box-sizing: border-box;
     overflow-x: auto; /* Горизонтальная прокрутка */
     max-width: 100%;  /* Ограничиваем ширину блока */
-    gap: 12px;
-}
-
-#thumbnails {
+    max-height: max-content;
+    gap: 4px;
     overflow: hidden;
 }
 
@@ -198,7 +207,7 @@ body {
     position: absolute;
     width: 257px;
     height: 257px;
-    top: 75px;
+    top: 8px;
 }
 
 .move-button {
@@ -306,6 +315,13 @@ body {
     #resizeScrollerWrapper {
         top: 400px;
     }    
+
+    #thumbnails {
+        max-height: 300px;
+        overflow-y: scroll;
+        gap: 8px;
+        margin: 0;
+    }
 
     .column-one {
         gap: 15px;
