--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     display: flex;
+    margin: 0 auto;
     background-color: darkgray;
     justify-content: center;
 }
@@ -7,7 +8,9 @@ body {
 .centered {
     margin-top: 2.5%;
     width: 100%;
+    padding: 5.75px;
     max-width: 800px;
+    margin-bottom: 2.5%;
     justify-content: center;
     align-items: center;
     border-radius: 8px;
@@ -284,6 +287,20 @@ body {
     align-items: center;
     justify-content: center;
     color: #333;
+}
+
+.footer {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: inline;
+}
+
+.footer a {
+    margin-left: 5px;
+}
+
+.footer span {
+    margin-left: 5px;
+    font-weight: bolder;
 }
 
 /* Стили для кнопок + и - */
