[Updats 4p[2p[.234..4[[] Dudpaduad udapdausodas dasdatsef ;}, by fltrl;

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     width: 100%;
     padding: 5.75px;
     max-width: 800px;
-    margin-bottom: 2.5%;
+    margin-bottom: 1.24032435%;
     justify-content: center;
     align-items: center;
     border-radius: 8px;
